<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDeleteNoteContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/imageDeleteNoteWarning"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_warning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorWhite" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/delete_note"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@id/imageDeleteNoteWarning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageDeleteNoteWarning"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/textConfirmDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:includeFontPadding="false"
        android:text="@string/do_you_want_to_delete_note"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toEndOf="@id/imageDeleteNoteWarning"
        app:layout_constraintTop_toBottomOf="@id/imageDeleteNoteWarning"/>


    <TextView
        android:id="@+id/textCancelDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/textConfirmDelete"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/textDeleteNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/delete"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toStartOf="@id/textCancelDelete"
        app:layout_constraintTop_toBottomOf="@id/textConfirmDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        />






</androidx.constraintlayout.widget.ConstraintLayout>